# alura_space

./: pyproject.toml
apps/galeria/: admin.py  forms.py  models.py  urls.py  views.py
apps/galeria/migrations/: 0002_fotografia_actegoria.py  0003_rename_actegoria_fotografia_categoria.py  0004_fotografia_pulicada.py  0005_rename_pulicada_fotografia_publicada.py  0006_fotografia_date_fotography.py  0009_alter_fotografia_publicada.py
apps/usuarios/: forms.py  urls.py  views.py
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0001_initial.py  0007_alter_fotografia_foto.py  0008_fotografia_usuario.py
setup/: settings.py  urls.py
setup/static/styles/: style.css
static/styles/: style.css
templates/galeria/: base.html  base_imagem.html  busca.html  editar_imagem.html  imagem.html  index.html  nova_imagem.html
templates/galeria/partials/: _alertas.html  _footer.html
templates/registration/: base_registration.html  login.html
templates/shared/: _menu_lateral.html  _menu_lateral_autenticacao.html  _menu_lateral_index.html  base_home.html  base_imagem.html  base_usuarios.html
templates/usuarios/: base_usuarios.html  cadastro.html  login.html
usuarios/: forms.py  urls.py  views.py
